[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sudoku-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
